# admin-webapp

./: .gitignore  .localenv  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  create_user.py  pyproject.toml  run_local.sh  wsgi.py
.github/workflows/: pullrequest_tests.yaml
admin_api/: Dockerfile  Makefile  app-logging.conf  install-docker.sh  main.py  pyproject.toml
admin_api/admin_api_routes/: __init__.py  admin_logs.py  authentication.py  categories.py  demographic.py  documents.py  email_template.py  endorsement_requsets.py  endorsement_requsets_audit.py  endorsements.py  models.py  moderators.py  ownership.py  ownership_requests.py  ownership_requests_audit.py  ownerships.py  paper_owners.py  submission_categories.py  submissions.py  tapir_sessions.py  user.py
admin_api/admin_api_routes/helpers/: session_cookie_middleware.py  token_refresh.py  user_session.py
admin_webapp/: __init__.py  admin_log.py  app.py  config.py  db.py  extensions.py  factory.py  filters.py  models.py  test.py
admin_webapp/controllers/: __init__.py  authentication.py  captcha_image.py  document.py  endorsement.py  ownership.py  registration.py  search.py  tapir-functions.py  tapir_functions.py  users.py  util.py
admin_webapp/controllers/tests/: test_authentication.py  test_registration.py
admin_webapp/db/: models.py
admin_webapp/routes/: __init__.py  endorsement.py  ownership.py  paper.py  tapir_session.py  ui.py  user.py
admin_webapp/static/: DEMO-user-profile-style.css  table.css  tapir-style.css
admin_webapp/templates/: advanced_search.html  dev.html  email_template_create.html  email_template_display.html  email_template_edit.html  login.html  macros.html  manage_email_templates.html  navbar.html  register.html  register2.html  tapir-base.html  tapir-landing.html
admin_webapp/templates/confirm/: add-email-template-confirm.html
admin_webapp/templates/endorsement/: display.html  endorse-stage-2.html  endorse-stage2.html  endorse.html  list.html  modify.html  no-self-endorse.html  request_detail.html
admin_webapp/templates/ownership/: display.html  list.html  need_paper_password.html  requests.html
admin_webapp/templates/paper/: detail.html
admin_webapp/templates/user/: display.html  list.html  moderators.html  moderators_by_category.html  non_academic_emails.html
admin_webapp/tests/: test_end_to_end.py
arxiv-admin-console/: Dockerfile  Makefile  nginx.sh  package-lock.json  package.json
arxiv-admin-console/nginx/: default.conf  nginx.conf
arxiv-admin-console/public/: env-config.json
arxiv-admin-console/public/admin-console/: env-config.json
arxiv-admin-console/src/: AdminLogs.tsx  App.tsx  Dashboard.tsx  RuntimeContext.tsx  adminApiDataProvider.ts  authProvider.ts  documents.tsx  endorsementRequests.tsx  endorsements.tsx  ownershipRequests.tsx  settings.ts  submissions.tsx  tapirSessions.tsx  users.tsx
arxiv-admin-console/src/bits/: CareereStatusField.tsx  CategoryField.tsx  PointValueBooleanField.tsx
docs/: DESIGN.md
local-setup/: Makefile
local-setup/htdoc/: 404.html
local-setup/nginx/: admin-console  nginx.conf
script/: run_docker_local.sh  run_local.sh
tests/: conftest.py  test_endorsement.py  test_login.py  test_ownership.py  test_ownership_reports.py
tests/fixtures/: bogus.yaml
