[tool.poetry]
name = "admin-webapp"
version = "0.0.1"
description = "admin webapp for arXiv"
authors = ["arxiv.org"]

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "491b8e24cd9d03814f3012d0ab2394ff7dec4b92"}
bleach = "^3.3.0"
captcha = "^0.4"
celery = "^5.1.2"
cryptography = "^3.3.2"
email-validator = "^1.2.1"
jsonschema = "^4.9.1"
openapi-spec-validator = "*"
pillow = "10.3.*"
pycountry = "^22.3.5"
python-dateutil = "^2.8.2"
pyyaml = "5.3.1"
redis = "^2.10.6"
redis-py-cluster = "^1.3.6"
requests = "^2.28.1"
urllib3 = "^1.26.11"
Bootstrap-Flask = "^2.1.0"
Flask-WTF = "^1.0.1"
pymysql = "^1.1.0"
flask-session = "^0.5.0"

[tool.poetry.dev-dependencies]
mimesis = "*"
mypy = "*"
pydocstyle = "*"
pylint = "*"
coverage = "*"
coveralls = "*"
pytest = "*"
pytest-cov = "*"
astroid = "*"
"nose2" = "*"
hypothesis = "^6.54.3"
fakeredis = "^1.9.0"
pytest-flask = "*"



[tool.poetry.group.dev.dependencies]
pytest-flask = "^1.2.0"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
